@startuml

        class observer.pattern.BarChartObserver {
            - courseData : Vector<CourseRecord>
            + BarChartObserver()
            + paint()
            + update()
            + update()
        }


        class observer.pattern.CourseController {
            - coursePanel : JPanel
            - sliders : Vector<JSlider>
            + CourseController()
            + actionPerformed()
            + addCourse()
            {static} + main()
            + stateChanged()
            + update()
            + update()
        }


        class observer.pattern.CourseData {
            # changesObserver : Vector<Observer>
            # newCoursesObserver : Vector<Observer>
            - courseData : Vector<CourseRecord>
            - isCourseInfoChanged : boolean
            - isNewCourseAdded : boolean
            + CourseData()
            + addCourseRecord()
            + attach()
            + changeCourseRecord()
            + getUpdate()
            + notifyObservers()
        }



        abstract class observer.pattern.Observable {
            # observers : Vector<Observer>
            + Observable()
            + attach()
            + detach()
            {abstract} + getUpdate()
            + notifyObservers()
            + notifyObservers()
        }




        interface observer.pattern.Observer {
            {abstract} + update()
            {abstract} + update()
        }



        class observer.pattern.PieChartObserver {
            - courseData : Vector<CourseRecord>
            + PieChartObserver()
            + paint()
            + update()
            + update()
        }


  observer.pattern.BarChartObserver .up.|> observer.pattern.Observer

  observer.pattern.CourseController .up.|> observer.pattern.Observer
  observer.pattern.CourseController o-- observer.pattern.CourseData
  observer.pattern.CourseData -up-|> observer.pattern.Observable
  observer.pattern.PieChartObserver .up.|> observer.pattern.Observer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter
@enduml